# netpilot-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: security_rules.json
src/netpilot_mcp/: __init__.py  server.py  session_manager.py
src/netpilot_mcp/drivers/: __init__.py  base.py  cisco_ios.py  generic.py  h3c_comware.py  huawei_vrp.py  ruijie_rgos.py
src/netpilot_mcp/security/: __init__.py  audit_logger.py  command_guard.py
src/netpilot_mcp/transport/: __init__.py  base.py  netmiko_transport.py  ssh_transport.py  telnet_transport.py
src/netpilot_mcp/utils/: __init__.py  output_parser.py  prompt_detector.py  structured_output.py
tests/: test_session_manager.py  test_structured_output.py
